# SistemasDistribuidos

./: .cproject  .gitignore  .project  Arbol.cpp  Arbol.h  CMakeLists.txt  CMakeLists.txt~  Disco.cpp  Disco.h  Nodo.cpp  Nodo.h  Slave.cpp  Slave.h  Terminal.cpp  Terminal.h  adios.txt  adiosBleh.txt  arbol.c  arbol.h  disco.h  hola.txt  hola.txt~  holaBleh.txt  main.c  main.cpp  nodo.h  operacion.c  sistdist.c
Debug/: Arbol.d  Disco.d  Nodo.d  SistemasDistribuidos  Slave.d  Terminal.d  main.d  makefile  sources.mk  subdir.mk
compilacion/: Makefile  SistemasDistribuidos
